Fixed issue regarding the displaying of the album covers in the turntable modal.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,6 +56,11 @@
     user-select: none;
 }
 
+body
+{
+    overflow-x: hidden;
+}
+
 @font-face
 {
     font-family: headingsFont;
